
BUGFIXES FROM BUGZILLA:

001 ==> 366624 - digiKam defaults to fullscreen with no menu and status bar.
002 ==> 372027 - Adjust grouping behavior [patch].
003 ==> 372232 - Strange window switching between main digikam window and importing window.
004 ==> 294579 - GROUP : grouped pictures are not processed together except the first one (Renaming, Tags, Metadata, Labels, etc.).
005 ==> 307332 - GROUP : problem about grouped items at copy operation.
006 ==> 368762 - Only Jpg files are visible if importing them into a Subfolder of a Grouped folder [patch].
007 ==> 371543 - BQM TimeAdjust tool language is wrong.
008 ==> 369051 - Too low similarity threshold in fuzzy/duplicate search bloats the results with potentially unwished high-similarity results [patch].
009 ==> 372217 - The results of the Duplicates are currently sorted by the image id and sortable by name and count if similars. But it should be sortable by the similarity of the duplicates, too. [patch].
010 ==> 372362 - Build error due to private function.
011 ==> 372341 - Title not showing in tool-tip.
012 ==> 372326 - digiKam crashed when closing it.
013 ==> 372314 - I cannot choose the template predefined in the import window while renaming (F2).
014 ==> 372164 - Camera related photograph properties are unavailable (erroneously).
015 ==> 372433 - Reduce debug messages from databaseserver with internal mysql.
016 ==> 372442 - Ordering of duplicates search by the result count is done lexicographically [patch].
017 ==> 366567 - Allow choosing several duplicate results [patch].
018 ==> 274360 - Fuzzy search finds only in few type of pictures.
019 ==> 372380 - Support for digiKam 5.2.0.
020 ==> 372484 - HTML captions only show in right side panel as rendered, not editable source.
021 ==> 372323 - Camera autodetection fails when using AppImage bundle.
022 ==> 372583 - The Similarity in DuplicatesSearch and FuzzySearch should be renamed to Similarity range [patch].
023 ==> 